passing javaoptions and increasing the xmx to 2gb