@@ -2,7 +2,8 @@
 @Library('github.com/fabric8io/fabric8-pipeline-library@master')
 def dummy
 clientsTemplate{
-  mavenNode {
+  def javaOptions = '-Duser.home=/root/ -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -Dsun.zip.disableMemoryMapping=true -XX:+UseParallelGC -XX:MinHeapFreeRatio=5 -XX:MaxHeapFreeRatio=10 -XX:GCTimeRatio=4 -XX:AdaptiveSizePolicyWeight=90 -Xms10m -Xmx2048m'
+  mavenNode (javaOptions:javaOptions) {
     ws{
       checkout scm
       sh "git remote set-url origin git@github.com:fabric8io/fabric8.git"
@@ -14,7 +15,7 @@ clientsTemplate{
 
       stage 'Promote'
       pipeline.release(stagedProject)
-      
+
       stage 'Update downstream dependencies'
       pipeline.updateDownstreamDependencies(stagedProject)
     }
